--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
 				<div class="col-sm-12 text-center alert flash">
 					<% flash.each do |type, message| %>
 						<div class="alert_sub_div">
-							<i class="material-icons <%= type %>">face</i><%= message %>
+							<i class="material-icons large <%= type %>">face</i><%= message %>
 						</div>
 					<% end %>
 				</div>
