--- a/app/views/league_invites/_form.html.erb
+++ b/app/views/league_invites/_form.html.erb
@@ -8,7 +8,7 @@
       <ul>
         <% @league_invite.errors.full_messages.each do |message| %>
           <li>
-            <i class="material-icons error">face</i>
+            <i class="material-icons large error">face</i>
             <%= message %>
           </li>
         <% end %>
