--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,7 +7,7 @@
       <ul>
         <% @user.errors.full_messages.each do |message| %>
           <li>
-            <i class="material-icons error">face</i>
+            <i class="material-icons large error">face</i>
             <%= message %>
           </li>
        <% end %>
