--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -46,7 +46,12 @@
       <% end %>
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <%= f.text_field :weekly_salary_cents, value: 25000, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+          <% if !@contract.id %>
+            <%= f.text_field :weekly_salary_cents, value: 25000, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+          <% else %>
+            <%= f.text_field :weekly_salary_cents, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+          <% end %>
+          
           <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
           <span class="mdl-textfield__error">Invalid salary.</span>
         </div>
