--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -1,11 +1,37 @@
 <% leagues = League.joins(:teams).where('teams.user_id = ?', @current_user.id) %>
 <% news_items = NewsItem.where(league: leagues.all.pluck(:id)).order(created_at: :desc) %>
 <div class="col-sm-12">
+	<% if leagues.count > 0 %>
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__title">
+	      <h3 class="mdl-card__title-text">
+	      	Active deadline
+	      </h3>
+	    </div>
+			<div class="mdl-card__actions">
+				<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= leagues.first.next_game_week_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
+							<% if Time.now <= leagues.first.next_game_week_deadline %>
+								&nbsp;(which is in <%= time_ago_in_words(leagues.first.next_game_week_deadline, include_seconds: true) %>)
+							<% else %>
+								&nbsp;(which was <%= time_ago_in_words(leagues.first.next_game_week_deadline, include_seconds: true) %> ago)
+							<% end %>
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	<% end %>
 	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">
+      <h3 class="mdl-card__title-text">
       	Gaffer news
-      </h2>
+      </h3>
     </div>
     <div class="mdl-card__actions">
     	<% if news_items.count > 0 %>
