--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -101,7 +101,9 @@ td[id^="my_contract_offer_name_"].best-offer {
 	border-left: 6px solid rgb(139,195,74);
 }
 td.transfer-item-cell {
-	width: 28%;
+	overflow: hidden;  
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 #header-row {
 	margin: 0px 0px 30px 0px;
@@ -226,6 +228,9 @@ td.transfer-item-cell {
 	height: 68px;
 	width: 54%;
 }
+.mdl-data-table-fixed {
+	table-layout: fixed;
+}
 .mdl-data-table tr th span {
 	color: #111111;
 	font-size: 30px;
@@ -252,6 +257,15 @@ td.transfer-item-cell {
   line-height: 28px;
   padding: 15px 0px;
   text-align: right;
+}
+.news-item-view-column {
+	width: 20%;
+}
+.no-bottom-border {
+	border-bottom: 0px;
+}
+.no-top-border {
+	border-top: 0px;
 }
 .normal-text {
 	color: #111111;
