--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -18,10 +18,15 @@
           <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
             <% your_transfers.order(created_at: :desc).each do |transfer| %>
               <tr>
-                <%= render partial: 'transfer_teams_status_row', locals: {transfer: transfer} %>
-                <td class="mdl-data-table__cell--non-numeric normal-text">
+                <td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
+                  Created <%= time_ago_in_words(transfer.created_at, include_seconds: true) %> ago
+                </td>
+                <td class="normal-text" style="border-bottom: 0px;">
                   <%= link_to "View", league_transfer_path(league, transfer), class: "mdl-button--primary" %>
                 </td>
+              </tr>
+              <tr>
+                <%= render partial: 'transfer_teams_status_row', locals: {transfer: transfer} %>
               </tr>
             <% end %>
           </table>
@@ -45,10 +50,15 @@
           <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
             <% @transfers.order(created_at: :desc).each do |transfer| %>
               <tr>
-                <%= render partial: 'transfer_teams_status_row', locals: {transfer: transfer} %>
-                <td class="mdl-data-table__cell--non-numeric normal-text">
+                <td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
+                  <%= transfer.transfer_completed? ? "Done deal" : "Active" %> - Created <%= time_ago_in_words(transfer.created_at, include_seconds: true) %> ago
+                </td>
+                <td class="normal-text" style="border-bottom: 0px;">
                   <%= link_to "View", league_transfer_path(league, transfer), class: "mdl-button--primary" %>
                 </td>
+              </tr>
+              <tr>
+                <%= render partial: 'transfer_teams_status_row', locals: {transfer: transfer} %>
               </tr>
             <% end %>
           </table>
