--- a/app/views/shared/team_players/_table_header.html.erb
+++ b/app/views/shared/team_players/_table_header.html.erb
@@ -23,6 +23,12 @@
 	<th class="hide contract_details">
 		<span>Ends</span>
 	</th>
+	<th class="hide next_up_details mdl-data-table__cell--non-numeric">
+		<span>Deadline (UTC)</span>
+	</th>
+	<th class="hide next_up_details mdl-data-table__cell--non-numeric">
+		<span>Opp</span>
+	</th>
 	<th class="mdl-data-table__cell--non-numeric">
 		<span> </span>
 	</th>
