--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -58,7 +58,7 @@
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							Active deadline
+							Earliest deadline
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							<%= @team.league.next_game_week_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
