--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -9,7 +9,7 @@
 				<h3 class="mdl-card__title-text">Status</h3>
 			</div>
       <div class="mdl-card__supporting-text">
-      	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+      	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-data-table-fixed">
 						<%= render partial: 'transfer_teams_status_row', locals: {transfer: @transfer} %>
 					</tr>
 				</table>
