--- a/app/views/shared/games/_player_lineup_table_row.html.erb
+++ b/app/views/shared/games/_player_lineup_table_row.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td class="mdl-data-table__cell--non-numeric normal-text">
-    <%= player_lineup.squad_position.short_name %>
+    <%= player_lineup.squad_position.short_name[0,1] %>
   </td>
   <td class="mdl-data-table__cell--non-numeric normal-text">
     <%= player_lineup.player_game_week.player.full_name(true) %>
