--- a/app/views/shared/team_players/_tables.html.erb
+++ b/app/views/shared/team_players/_tables.html.erb
@@ -8,6 +8,7 @@
 			<ul class="horizontal-style-tabs">
 				<li><a id="performance_details_link" class="normal-text selected-tab">View stats</a></li>
 				<li><a id="contract_details_link" class="normal-text">View contracts</a></li>
+				<li><a id="next_up_details_link" class="normal-text">View next up</a></li>
 			</ul>
 		</div>
 		<% if @team.team_players.includes(:squad_position, :player).where(first_team: true).count > 0 %>
@@ -18,12 +19,14 @@
 					<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
 						<tr id="<%= dom_id(team_player) %>">
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= team_player.squad_position.short_name %>
+								<%= team_player.squad_position.short_name[0,1] %>
 							</td>
 							<%= render partial: 'shared/team_players/details', locals: {team_player: team_player} %>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
-									<%= f.submit "Drop", class: "negative_action_button" %>
+								<% if team_player.player.game_week_deadline_at && team_player.player.game_week_deadline_at - 10.minutes > Time.now %>
+									<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
+										<%= f.submit "Drop", class: "negative_action_button" %>
+									<% end %>
 								<% end %>
 							</td>
 						</tr>
@@ -43,16 +46,18 @@
 					
 						<tr id="<%= dom_id(team_player) %>">
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= team_player.squad_position.short_name %> <%= SquadPosition.long_name_to_short_name(team_player.player.playing_position) %>
+								(<%= SquadPosition.long_name_to_short_name(team_player.player.playing_position) %>)
 							</td>
 							<%= render partial: 'shared/team_players/details', locals: {team_player: team_player} %>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<% first_team_players = @team.team_players.where(first_team: true) %>
 								<% if first_team_players.count < 11 %>
 									<% if (team_player.player.playing_position == 'Goalkeeper' && first_team_players.joins(:squad_position).where('squad_positions.short_name = ?', 'GK').count === 0 ) || (team_player.player.playing_position != 'Goalkeeper' && first_team_players.joins(:squad_position).where.not('squad_positions.short_name = ?', 'GK').count < 10 ) %>
-										<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
-											<%= f.hidden_field :squad_position_id, value: team_player.get_squad_position_from_players_playing_position.id %>
-											<%= f.submit "Add", class: "positive_action_button" %>
+										<% if team_player.player.game_week_deadline_at && team_player.player.game_week_deadline_at - 10.minutes > Time.now %>
+											<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
+												<%= f.hidden_field :squad_position_id, value: team_player.get_squad_position_from_players_playing_position.id %>
+												<%= f.submit "Add", class: "positive_action_button" %>
+											<% end %>
 										<% end %>
 									<% end %>
 								<% end %>
