--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,9 +24,9 @@
               Teams
             </td>
             <td class="mdl-data-table__cell--non-numeric normal-text">
-              <%= truncate(@home_team.title, length: 17) %>
+              <%= truncate(@home_team.title, length: 13) %>
               v
-              <%= truncate(@away_team.title, length: 17) %>
+              <%= truncate(@away_team.title, length: 13) %>
             </td>
           </tr>
           <tr>
@@ -39,10 +39,10 @@
           </tr>
           <tr>
             <td class="mdl-data-table__cell--non-numeric normal-text">
-              Active deadline
+              Earliest deadline
             </td>
             <td class="mdl-data-table__cell--non-numeric normal-text">
-              <%= @home_team.league.next_game_week_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
+              <%= render partial: 'teams/earliest_deadline', locals: { team: nil, display_distance: false } %>
             </td>
           </tr>
           <tr>
@@ -62,7 +62,7 @@
       <div class="mdl-card__actions">
         <div class="mdl-card__supporting-text">
           <div class="mdl-card__title">
-            <h3 class="mdl-card__title-text"><%= @home_team.title %> (<%= @home_team.user.full_name %>)</h3>
+            <h3 class="mdl-card__title-text"><%= truncate(@home_team.title, length: 13) %> (<%= truncate(@home_team.user.full_name, length: 14) %>)</h3>
           </div>
         </div>
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
@@ -78,7 +78,7 @@
       <div class="mdl-card__actions">
         <div class="mdl-card__supporting-text">
           <div class="mdl-card__title">
-            <h3 class="mdl-card__title-text"><%= @away_team.title %> (<%= @away_team.user.full_name %>)</h3>
+            <h3 class="mdl-card__title-text"><%= truncate(@away_team.title, length: 13) %> (<%= truncate(@away_team.user.full_name, length: 14) %>)</h3>
           </div>
         </div>
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
