--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -1,33 +1,38 @@
 <% leagues = League.joins(:teams).where('teams.user_id = ?', @current_user.id) %>
 <% news_items = NewsItem.where(league: leagues.all.pluck(:id)).order(created_at: :desc) %>
 <div class="col-sm-12">
-	<% if leagues.count > 0 %>
-		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-			<div class="mdl-card__title">
-	      <h3 class="mdl-card__title-text">
-	      	Active deadline
-	      </h3>
-	    </div>
-			<div class="mdl-card__actions">
-				<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-					<tr>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= leagues.first.next_game_week_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
-							<% if Time.now <= leagues.first.next_game_week_deadline %>
-								&nbsp;(which is in <%= time_ago_in_words(leagues.first.next_game_week_deadline, include_seconds: true) %>)
-							<% else %>
-								&nbsp;(which was <%= time_ago_in_words(leagues.first.next_game_week_deadline, include_seconds: true) %> ago)
-							<% end %>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	<% end %>
 	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
       <h3 class="mdl-card__title-text">
-      	Gaffer news
+      	Upcoming game week
+      </h3>
+    </div>
+		<div class="mdl-card__actions">
+			<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+				<% @current_user.teams.each do |team| %>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
+							<%= link_to team.league.name, league_path(team.league), class: "content-link" %>
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
+							<% if team.get_current_game %>
+								<%= render partial: 'games/simple_matchup', locals: { game: team.get_current_game } %>
+							<% end %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;" colspan="2">
+							<%= render partial: 'teams/earliest_deadline', locals: { team: team, display_distance: true } %>
+						</td>
+					</tr>
+				<% end %>
+			</table>
+		</div>
+	</div>
+	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+      <h3 class="mdl-card__title-text">
+      	News
       </h3>
     </div>
     <div class="mdl-card__actions">
@@ -39,7 +44,6 @@
 					<% end %>
 				</table>
 			<% else %>
-				<% offset = rand(@current_user.teams.count) %>
 				<span class="normal-text">:-/ It's a slow news day.</span>
 			<% end %>
     </div>
