--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -68,7 +68,30 @@
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
           <%= render partial: "shared/games/table_header" %>
           <% home_team_lineups = @home_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order") %>
-          <% home_team_lineups.each do |player_lineup| %>
+          
+          <% all_home_team_players = Player.where(id: @home_team.team_players.where('team_players.first_team = ?', true).pluck('team_players.player_id')) %>
+          <% played_players = Player.where(id: (home_team_lineups.joins(player_game_week: :player).pluck('player_game_weeks.player_id'))) %>
+          <% other_first_team_players = Player.where(id: (all_home_team_players - played_players).map(&:id)) %>
+          <% other_first_team_players_wth_game_week = other_first_team_players.joins(:player_game_weeks).where('player_game_weeks.game_week_id = ?', @game_week.id) %>
+          <% other_first_team_players_yet_to_play = Player.where(id: (other_first_team_players - other_first_team_players_wth_game_week).map(&:id)) %> %>
+
+          
+          <%= all_home_team_players.inspect %>
+          <%= all_home_team_players.count %>
+          <br/>
+          <%= played_players.inspect %>
+          <%= played_players.count %>
+          <br/>
+          <%= other_first_team_players.inspect %>
+          <%= other_first_team_players.count %>
+          <br/>
+          <%= other_first_team_players_wth_game_week.inspect %>
+          <%= other_first_team_players_wth_game_week.count %>
+          <br/>
+          <%= other_first_team_players_yet_to_play.inspect %>
+          <%= other_first_team_players_yet_to_play.count %>
+
+          <% home_team_lineups.each do |player_lineup| %>            
             <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
           <% end %>
           <%= render partial: "shared/games/summary_row", locals: {player_lineups: home_team_lineups} %>
@@ -85,7 +108,7 @@
           <%= render partial: "shared/games/table_header" %>
           <% away_team_lineups = @away_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order") %>
           <% away_team_lineups.each do |player_lineup| %>
-            <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
+            <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup, first_team_players: @home_team.team_players.joins(:player).where('team_players.first_team = ? ', true)} %>
           <% end %>
           <%= render partial: "shared/games/summary_row", locals: {player_lineups: away_team_lineups} %>
         </table>
