--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -68,12 +68,18 @@
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
           <%= render partial: "shared/games/table_header" %>
           <% home_team_lineups = @home_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order") %>
-          
-          <%= @game.get_team_lineup_including_yet_to_play(@home_team).inspect %>
 
-          <% home_team_lineups.each do |player_lineup| %>            
-            <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
+          
+          
+          <% @game.get_team_lineup_including_yet_to_play(@home_team).each do |game_player| %>
+            <% if game_player.player_game_weeks.joins(:player_lineups).where('player_game_weeks.game_week_id = ?', @game_week.id).count == 0 %>
+              <%= render partial: "shared/games/player_lineup_yet_to_play_row", locals: {yet_to_play_team_player: game_player} %>
+            <% else %>
+              <% player_lineup = home_team_lineups.joins(:player_game_week).where('player_game_weeks.game_week_id = ? AND player_game_weeks.player_id = ?', @game_week.id, game_player.id).first %>
+              <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
+            <% end %>
           <% end %>
+
           <%= render partial: "shared/games/summary_row", locals: {player_lineups: home_team_lineups} %>
         </table>
       </div>
