--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -41,7 +41,7 @@
 									<% end %>
 								</td>
 								<td class="mdl-data-table__cell--non-numeric normal-text">
-									<%= game.get_score %>
+									<% if game.game_week.in_play? %> (<%= game.get_live_score %>)<% else %><%= game.get_score %><% end %>
 								</td>
 							</tr>
 						<% end %>
