--- a/app/views/shared/_player_game_week_table.html.erb
+++ b/app/views/shared/_player_game_week_table.html.erb
@@ -90,4 +90,67 @@
 			<% end %>
 		</table>
 	</div>
+<% else %>
+	<div class="mdl-card__title">
+		<h3 class="mdl-card__title-text">Stats</h3>
+	</div>
+	<div class="mdl-card__actions">
+		<div class="mdl-card__title">
+			<h4 class="mdl-card__title-text">Summary</h4>
+		</div>
+		<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+			<tr>
+				<th>
+					<span>Mp</span>
+				</th>
+				<th>
+					<span>Att</span>
+				</th>
+				<th>
+					<span>Att / 90</span>
+				</th>
+				<th>
+					<span>Def</span>
+				</th>
+				<th>
+					<span>Def / 90</span>
+				</th>
+			</tr>
+			<tr>
+				<td class="mdl-data-table__cell--non-numeric normal-text" colspan="5">
+					No game weeks played.
+				</td>
+			</tr>
+		</table>
+		<div class="mdl-card__title">
+			<h4 class="mdl-card__title-text">Game weeks</h4>
+		</div>
+		<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+			<tr>
+				<th class="mdl-data-table__cell--non-numeric">
+					<span>Season</span>
+				</th>
+				<th>
+					<span>GW</span>
+				</th>
+				<th>
+					<span>Mp</span>
+				</th>
+				<th>
+					<span>Gs</span>
+				</th>
+				<th>
+					<span>A</span>
+				</th>
+				<th>
+					<span>Gc</span>
+				</th>
+			</tr>
+			<tr>
+				<td class="mdl-data-table__cell--non-numeric normal-text">
+					No game weeks played.
+				</td>
+			</tr>
+		</table>
+	</div>
 <% end %>
