--- a/app/views/news_items/_news_item_row.html.erb
+++ b/app/views/news_items/_news_item_row.html.erb
@@ -2,37 +2,19 @@
 
 <% if resource.instance_of? Player %>
 	<!-- PLAYER news_items -->
-	<!-- PLAYER news_item: Has contract -->
-	<% if resource.has_current_contract_in_league?(news_item.league) %>
-		<tr>
-			<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
-				<%= news_item.created_at.strftime("%d %b") %> - <%= truncate(news_item.body, length: 36) %>
-			</td>
-			<td class="normal-text" style="border-bottom:0px;">
-				<%= link_to 'View', league_player_path(news_item.league.id, resource.id), class: "mdl-button--primary" %>
-			</td>
-		</tr>
-		<tr>
-			<td class="mdl-data-table__cell--non-numeric normal-text" colspan="3" style="border-top:0px;">
-				<%= resource.full_name_and_playing_position_and_real_team %> 
-			</td>
-		</tr>
-	<!-- PLAYER news_item: Does not have contract -->
-	<% else %>
-		<tr>
-			<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
-				<%= news_item.created_at.strftime("%d %b") %> - <%= truncate(news_item.body, length: 36) %>
-			</td>
-			<td class="normal-text" style="border-bottom:0px;">
-				<%= link_to 'View', league_player_path(news_item.league.id, resource.id), class: "mdl-button--primary" %>
-			</td>
-		</tr>
-		<tr>
-			<td class="mdl-data-table__cell--non-numeric normal-text" colspan="3" style="border-top:0px;">
-				<%= resource.full_name_and_playing_position_and_real_team %>
-			</td>
-		</tr>
-	<% end %>
+	<tr>
+		<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
+			<%= news_item.created_at.strftime("%d %b") %> - <%= truncate(news_item.body, length: 36) %>
+		</td>
+		<td class="normal-text" style="border-bottom:0px;">
+			<%= link_to 'View', league_player_path(news_item.league.id, resource.id), class: "mdl-button--primary" %>
+		</td>
+	</tr>
+	<tr>
+		<td class="mdl-data-table__cell--non-numeric normal-text" colspan="3" style="border-top:0px;">
+			<%= resource.full_name_and_playing_position_and_real_team %>
+		</td>
+	</tr>
 
 <% elsif resource.instance_of? Game %>
 	<!-- GAME news_items -->
@@ -70,5 +52,24 @@
 				Transfer cancelled
 			</td>
 		<% end %>
+	</tr>
+<% elsif news_item.news_item_resource_type === 'Contract' %>
+	<!-- CONTRACT news_items -->
+	<tr>
+		<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
+			<%= news_item.created_at.strftime("%d %b") %> - <%= truncate(news_item.body, length: 36) %>
+		</td>
+		<% if resource %>
+			<td class="normal-text" style="border-bottom:0px;">
+				<%= link_to 'View', league_player_path(news_item.league.id, resource.player.id), class: "mdl-button--primary" %>
+			</td>
+		<% end %>
+	</tr>
+	<tr>
+		<% if resource %>
+			<td class="mdl-data-table__cell--non-numeric normal-text " colspan="3" style="border-top:0px;">
+				<%= "#{truncate(resource.team.title, length: 12)} offer contract to #{resource.player.full_name_and_playing_position_and_real_team}" %>
+			</td>
+		<% end %>	
 	</tr>
 <% end %>
