Show player value on player and team_player show screens

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -49,6 +49,14 @@
 								<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %> p/w until <%= team_player.current_contract.ends_at.strftime("%d %b %y") %>
 							</td>
 						</tr>
+						<tr>
+							<td class="mdl-data-table__cell--non-numeric normal-text">
+								Value
+							</td>
+							<td class="mdl-data-table__cell--non-numeric normal-text">
+								<%= team_player.player.player_value(Season.current.first) %>
+							</td>
+						</tr>
 					<% end %>
 				</table>
 			</div>
