--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -32,6 +32,14 @@
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Value
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= @team_player.player.player_value(Season.current.first) %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Salary
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
