Remove link to new transfer and add player search

--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -36,8 +36,7 @@
       </div>
       <div class="mdl-card__supporting-text">
         <ul class="horizontal-style">
-          <li><%= link_to "New transfer", new_league_transfer_path(league), class: "mdl-button--primary" %></li>
-          <li><%= link_to "View all players", league_players_path(league), class: "mdl-button--primary" %></li>
+          <li><%= link_to "Find a player", league_players_path(league), class: "mdl-button--primary" %></li>
         </ul>
       </div>
     </div>
