--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -8,30 +8,53 @@
 	      	<%= link_to @league.name, league_path(@league), class: 'content-link' %>&nbsp;players
 	      </h2>
 	    </div>
+
 	    <div class="mdl-card__actions">
-	    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-	    		<tr>
-						<th class="mdl-data-table__cell--non-numeric">
-							<span>Ps</span>
-						</th>
-						<th class="mdl-data-table__cell--non-numeric">
-							<span>Tm</span>
-						</th>
-						<th class="mdl-data-table__cell--non-numeric">
-							<span>Name</span>
-						</th>
-						<th class="mdl-data-table__cell--non-numeric">
-							<span>Status</span>
-						</th>
-					</tr>
-					<% players_array = @players.sort_by{ |player| [player.sort_val, player.real_team_short_name, player.last_name, player.first_name] }.paginate(page: params[:page], per_page: ((@players.count / 5).ceil + 1)) %>
-					<% players_array.each do |player| %>
-						<tr>
-							<%= render partial: 'shared/player', locals: {player: player, team_players: team_players, league: @league} %>
+				<%= form_tag(league_players_path(@league), method: "get", id: "search-form") do %>
+					<div class="form-group">
+	        	<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+			    		<%= text_field_tag :search, params[:search], class: "mdl-textfield__input" %>
+			    		<%= label_tag :search, "Name, position, or team", class: "mdl-textfield__label" %>
+			    	</div>
+			    </div>
+			    <div class="form-group">
+			    	<%= submit_tag "Search", name: nil, class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+			    </div>
+				<% end %>
+			</div>
+
+	    <div class="mdl-card__actions">
+	    	<% has_players = true %>
+				<% if @players.count > 0 %>
+		    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+		    		<tr>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span>Ps</span>
+							</th>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span>Tm</span>
+							</th>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span>Name</span>
+							</th>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span>Status</span>
+							</th>
 						</tr>
+						<% players_array = @players.sort_by{ |player| [player.sort_val, player.real_team_short_name, player.last_name, player.first_name] }.paginate(page: params[:page], per_page: [((@players.count / 5).ceil + 1), 50].max) %>
+						<% players_array.each do |player| %>
+							<tr>
+								<%= render partial: 'shared/player', locals: {player: player, team_players: team_players, league: @league} %>
+							</tr>
+						<% end %>
+					<% else %>
+						<% has_players = false %>
+						<span class="normal-text">No players to display</span>
 					<% end %>
 				</table>
-				<%= will_paginate players_array %>
+				<% if has_players %>
+					<%= will_paginate players_array %>
+				<% end %>
 			</div>
 		</div>
 	</div>
