--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -47,6 +47,7 @@
 			</div>
       <div class="mdl-card__supporting-text">
         <ul class="horizontal-style">
+        	<li><%= link_to "Browse all players", league_players_path(league), class: "mdl-button--primary" %></li>
           <li><%= link_to 'Offer free agent a contract', new_league_contract_path(league.id), class: "mdl-button--primary" %></li>
         </ul>
       </div>
