--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -29,6 +29,29 @@
 			</table>
 		</div>
 	</div>
+	<% if user_league = @current_user.only_league %>
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__title">
+	      <h3 class="mdl-card__title-text">
+	      	Player search
+	      </h3>
+	    </div>
+			<div class="mdl-card__actions">
+				<%= form_tag(league_players_path(user_league), method: "get", id: "search-form") do %>
+					<div class="form-group">
+		      	<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+			    		<%= text_field_tag :search, params[:search], class: "mdl-textfield__input" %>
+			    		<%= label_tag :search, "Name, position, or team", class: "mdl-textfield__label" %>
+			    	</div>
+			    </div>
+			    <div class="form-group">
+			    	<%= submit_tag "Search", name: nil, class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+			    </div>
+				<% end %>
+			</div>
+		</div>
+	<% end %>
+
 	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
       <h3 class="mdl-card__title-text">
